# Modus

./: .gitignore  AGENTS.md  DOCK_NOTIFICATIONS_UPDATE.md  NOTIFICATION_CONTAINER_FEATURES.md  README.md  bar.py  debug_memory.py  dock.py  example_player.py  install.sh  lock.py  main.css  main.py  memory_monitor.py  player.py  pyproject.toml  requirements.txt  test_clipboard_search.py  test_dashboard_notifications.py  test_dock_notifications.py  test_dock_notifications_with_data.py  test_image_cache.py  test_mouse_navigation.py  test_notification_caching_flow.py  test_notification_container.py
config/: __init__.py  config.json  config.py  dark-theme.sh  data.py  dock.json  info.py  launcher.json  otp_accounts.json  wallpaper.py
lock/: bash.sh  lock.py  main.css
modules/: about.py  corners.py  dock.py  example_dock.py  notification.py  notification_popup.py  osd.py  switcher.py  widget.py
scripts/: gamemode.sh  screen-capture.sh  systemupdates.sh
services/: __init__.py  auth.py  battery.py  brightness.py  custom_notification.py  modus.py  mpris.py  network.py  notification.py  powerprofile.py  screencapture.py  todo.py  wifi.py
snippets/: __init__.py  iconss.py
styles/: \  about.css  bar.css  battery-widget.css  calendar.css  colors.css  components.css  controlcenter.css  controls.css  dashboard.css  dock.css  dropdown.css  indicators.css  launcher.css  launcher_simple.css  lock.css  main.css  menubar.css  notif_center.css  notification-center.css  notification.css  osd.css  panel.css  player.css  switcher.css  todo.css  tray.css  widgets.css  workspaces.css
(+182 files in other folders)
